fit layout now scrolls the topbar. default layout now is correctly set on tablets. fixed options button size in reader

--- a/MangaDB/resources/reader/style/reader.css
+++ b/MangaDB/resources/reader/style/reader.css
@@ -199,9 +199,11 @@
 
 #readerOptionLink {
 	position: absolute;
-	top: 7.5em;
+	top: 8.5em;
 	left: 1em;
-	cursor : pointer;
+	cursor: pointer;
+	height: 1em;
+	line-height: 1em;
 }
 
 #readerChapterLink a
